fixed most pages

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,31 +1,6 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  selected={true}
-}
-
 @article{ashikuzzaman2016hgi2,
   abbr={Int. J. Mod.},
   title={HgI2 as x-ray imager- Modulation transfer function approach},
@@ -165,15 +140,15 @@
   abstract={This study compares quality of discharge teaching and care coordination for parents of children with challenging behaviors participating in a nursing implementation project, which used an interactive iPad application, to usual discharge care. Unlike parents  in  the  larger  quasi-experimental  longitudinal  project,  parents  of  children  with  challenging  behaviors  receiving  the  discharge  teaching  application  (n  =  14)  reported  lower  mean  scores  on  the  quality  of  discharge  teaching  scale–delivery  subscale  (M = 8.2, SD=   3.1)  than  parents  receiving  usual  care  (n  =   11)  (M = 9.6, SD=   4.7)  and  lower  scores  on  the  Care  Transition  Measure  (M = 2.44, SD=   1.09)  than  parents  receiving  usual  care  (M = 3.02, SD=   0.37),  with  moderate  to  large  effects (0.554–0.775). The discharge teaching approach was less effective with this subset, suggesting other approaches might be considered for this group of parents. Further study with a larger sample specific to parents of children with challenging behaviors is needed to assess their unique needs and to optimize their discharge experience.}
 }
 
-@article{lerret2021feasibility,
-  abbr={West. J. Nurs. Res},
-  title={Feasibility and Acceptability of a mHealth Self-Management Intervention for Pediatric Transplant Families},
+@article{lerret2022feasibility,
+  title={Feasibility and acceptability of a mHealth self-management intervention for pediatric transplant families},
   author={Lerret, Stacee M and Schiffman, Rachel and White-Traut, Rosemary and Medoff-Cooper, Barbara and Ahamed, Sheikh Iqbal and Adib, Riddhiman and Liegl, Melodee and Alonso, Estella and Mavis, Alisha and Jensen, Kyle and others},
-  journal={Western Journal of Nursing Research},
-  pages={01939459211024656},
-  year={2021},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA},
-  abstract={Families of pediatric solid organ transplant recipients need ongoing education and support in the first 30 days following hospital discharge for the transplantation. The purpose of this report is to describe the feasibility, acceptability, and preliminary efficacy of a mHealth family-self management intervention, (myFAMI), designed to improve post-discharge outcomes of coping, family quality of life, self-efficacy, family self-management, and utilization of health care resources. We enrolled 46 primary family members. myFAMI was feasible and acceptable; 81% (n=17/21) of family members completed the app at least 24/30 days (goal 80% completion rate). Family members generated 134 trigger alerts and received a nurse response within the goal timeframe of < 2 h 99% of the time. Although there were no significant differences between groups, primary outcomes were in the expected direction. The intervention was well received and is feasible for future post-discharge interventions for families of children who receive an organ transplant.}
+  journal={Western journal of nursing research},
+  volume={44},
+  number={10},
+  pages={955--965},
+  year={2022},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
 @inproceedings{tumpa2022mtocs,
@@ -198,4 +173,16 @@
   year={2022},
   publisher={JMIR Publications Inc., Toronto, Canada},
   abstract={Background: Solid-organ transplantation is the treatment of choice for children with end-stage organ failure. Ongoing recovery and medical management at home after transplant are important for recovery and transition to daily life. Smartphones are widely used and hold the potential for aiding in the establishment of mobile health (mHealth) protocols. Health care providers, nurses, and computer scientists collaboratively designed and developed mHealth family self-management intervention (myFAMI), a smartphone-based intervention app to promote a family self-management intervention for pediatric transplant patients’ families. Objective: This paper presents outcomes of the design stages and development actions of the myFAMI app framework, along with key challenges, limitations, and strengths. Methods: The myFAMI app framework is built upon a theory-based intervention for pediatric transplant patients, with aid from the action research (AR) methodology. Based on initially defined design motivation, the team of researchers collaboratively explored 4 research stages (research discussions, feedback and motivations, alpha testing, and deployment and release improvements) and developed features required for successful inauguration of the app in the real-world setting. Results: Deriving from app users and their functionalities, the myFAMI app framework is built with 2 primary components: the web app (for nurses’ and superadmin usage) and the smartphone app (for participant/family member usage). The web app stores survey responses and triggers alerts to nurses, when required, based on the family members’ response. The smartphone app presents the notifications sent from the server to the participants and captures survey responses. Both the web app and the smartphone app were built upon industry-standard software development frameworks and demonstrate great performance when deployed and used by study participants. Conclusions: The paper summarizes a successful and efficient mHealth app-building process using a theory-based intervention in nursing and the AR methodology in computer science. Focusing on factors to improve efficiency enabled easy navigation of the app and collection of data. This work lays the foundation for researchers to carefully integrate necessary information (from the literature or experienced clinicians) to provide a robust and efficient solution and evaluate the acceptability, utility, and usability for similar studies in the future.}
+}
+
+@article{gani2023structural,
+  abbr={AI in Med},
+  title={Structural causal model with expert augmented knowledge to estimate the effect of oxygen therapy on mortality in the icu},
+  author={Gani, Md Osman and Kethireddy, Shravan and Adib, Riddhiman and Hasan, Uzma and Griffin, Paul and Adibuzzaman, Mohammad},
+  journal={Artificial intelligence in medicine},
+  volume={137},
+  pages={102493},
+  year={2023},
+  publisher={Elsevier},
+  selected={true}
 }
