--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -184,5 +184,20 @@
   pages={102493},
   year={2023},
   publisher={Elsevier},
-  selected={true}
+  selected={true},
+  abstract={Recent advances in causal inference techniques, more specifically, in the theory of structural causal models, provide the framework for identifying causal effects from observational data in cases where the causal graph is identifiable, i.e., the data generation mechanism can be recovered from the joint distribution. However, no such studies have been performed to demonstrate this concept with a clinical example. We present a complete framework to estimate the causal effects from observational data by augmenting expert knowledge in the model development phase and with a practical clinical application. Our clinical application entails a timely and essential research question, the effect of oxygen therapy intervention in the intensive care unit (ICU). The result of this project is helpful in a variety of disease conditions, including severe acute respiratory syndrome coronavirus-2 (SARSCoV-2) patients in the ICU. We used data from the MIMIC-III database, a widely used health care database in the machine learning community with 58,976 admissions from an ICU in Boston, MA, to estimate the oxygen therapy effect on morality. We also identified the model’s covariate-specific effect on oxygen therapy for more personalized intervention.}
+}
+
+@article{adib2024311,
+  abbr={JCTS},
+  title={Clinical Abstract: Democratizing access to clinical data for research: Implementation and evaluation strategies in an academic medical center and lessons learned},
+  author={Adib, Riddhiman and Myers, Susan and Benton, Erik and Cohen, Aaron and Adibuzzaman, Mohammad},
+  journal={Journal of Clinical and Translational Science},
+  volume={8},
+  number={s1},
+  pages={95--96},
+  year={2024},
+  publisher={Cambridge University Press},
+  selected={true},
+  abstract={To facilitate data exploration at an academic medical center, we piloted self-service data science tools to provide easy access to research data and provide analytical workspace. The objectives are: i) data delivery with data governance and cohort discovery under a managed self-service model and ii) data science and analytics tool for advanced users. Using existing commercial frameworks, we implemented a few pilot self-service tools. The key characteristics of the tools were i) high degrees of functionality and flexibility for data access and data governance, ii) lower cost to build and maintain, and iii) long-term organizational strategic alignment with the academic medical center. We conducted a two-phase evaluation with the pilot self-service tool: functionality-based assessment, prioritizing tools for data science users, and usability-based assessment, evaluating selected tools through customized maturity models and surveys. The evaluation study targeted a focus group study with five diverse faculties and researchers in an academic medical center seeking improved access to research resources. In evaluation phase 1, we explored seven self-service tool frameworks suitable for our research data warehouse (RDW). In phase 2, we implemented the top two tools selected from phase 1, QlikView and Palantir Foundry. Although the tool built on Palantir has higher mean and individual scores for user feedback than Qlik's, there is no statistically significant difference. Both tools had steep initial learning curve. Palantir has better feedback from qualitative responses. Our study findings highlight prioritized functionalities (efficiency, flexibility, sustainability, security, and cost reduction) for data science tool users; however features and the tool itself requires long term organizational planning and investment. Academic and research medical centers strongly focus on efficient pilot data access for researchers to aid hypothesis generation. Establishing a clinical research-focused self-service data tool addresses the well-established demand for research resources and offers a model for similar organizations.}
 }
